fix scrollbars UI

--- a/client/src/scss/base/_utils.scss
+++ b/client/src/scss/base/_utils.scss
@@ -4,7 +4,7 @@
 
 .custom-scroll {
     ::-webkit-scrollbar {
-        width: 10px;
+        width: 5px;
     }
 
     /* Track */
