--- a/client/src/scss/base/_variables.scss
+++ b/client/src/scss/base/_variables.scss
@@ -24,7 +24,7 @@ $color-blue: #3BA5F4;
 
 // misc. colors
 $color-form-placeholders: #959595;
-$color-scroll-bar: #cccccc;
+$color-scroll-bar: rgba($color: #777777, $alpha: 0.5);
 
 // lengths
 // profile pic size:
